--- a/app/globals.css
+++ b/app/globals.css
@@ -2,16 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
-
 
 @layer base {
   :root {
@@ -40,6 +35,7 @@ body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.694);
   }
 
   .dark {
@@ -67,9 +63,9 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.694);
   }
 }
-
 
 @layer base {
   * {
@@ -86,4 +82,8 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   -webkit-text-fill-color: var(--foreground) !important;
+}
+
+.text-shadow {
+  text-shadow: var(--text-shadow);
 }
